添加禁用自动补全功能

--- a/goto.html
+++ b/goto.html
@@ -49,6 +49,7 @@
             <option value="https://" selected>https</option>
             <option value="ftp://">ftp</option>
             <option value="file://">file</option>
+            <option value="">禁用</option>
         </select>
     </div>
     <div>
