--- a/text.html
+++ b/text.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script>
     document.writeln(decodeURIComponent(location.search.substring(1)));
 </script>
